--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 Name: <input name="uname"> Age: <input name="uage">
 Gender: <input type="radio" id="rmale" name="ugender"> Male
  <input type="radio" id="rfemale" name="ugender"> Female
- <img src="C:\Users\AJITSHUKLA\OneDrive\Documents\aadar\pic.jpg.jpg"></img>
+ <img src="pic.jpg.jpg"></img>
  <p>please enter your problem below<br>
  <textarea name="contri" rows="5" cols="50"></textarea>
  <style>
@@ -22,7 +22,7 @@ Gender: <input type="radio" id="rmale" name="ugender"> Male
         }
     </style>
     <p>Click the styled button to go to another web page:</p>
-    <a href="file:///C:/Users/AJITSHUKLA/OneDrive/Documents/aadar/chat.html" class="button-link">
+    <a href="chat.html" class="button-link">
         Submit
     </a>
  </Form>
